Gitignore set correctly

--- a/.gitignore
+++ b/.gitignore
@@ -12,6 +12,10 @@
 
 # testing
 /coverage
+/__tests__/
+/cypress/
+/playwright-report/
+/test-results/
 
 # next.js
 /.next/
@@ -19,10 +23,13 @@
 
 # production
 /build
+/dist
 
 # misc
 .DS_Store
 *.pem
+.vscode/
+.idea/
 
 # debug
 npm-debug.log*
@@ -32,6 +39,10 @@ yarn-error.log*
 
 # env files (can opt-in for committing if needed)
 .env*
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
 
 # vercel
 .vercel
@@ -39,3 +50,87 @@ yarn-error.log*
 # typescript
 *.tsbuildinfo
 next-env.d.ts
+
+# tailwindcss
+.tailwindcss-cache
+
+# playwright
+.playwright-mcp/
+
+# temporary files
+*.tmp
+*.temp
+.cache/
+
+# logs
+logs
+*.log
+
+# runtime data
+pids
+*.pid
+*.seed
+*.pid.lock
+
+# coverage directory used by tools like istanbul
+coverage/
+*.lcov
+
+# nyc test coverage
+.nyc_output
+
+# dependency directories
+node_modules/
+jspm_packages/
+
+# optional npm cache directory
+.npm
+
+# optional eslint cache
+.eslintcache
+
+# optional REPL history
+.node_repl_history
+
+# output of 'npm pack'
+*.tgz
+
+# yarn integrity file
+.yarn-integrity
+
+# parcel-bundler cache (https://parceljs.org/)
+.parcel-cache
+
+# storybook build outputs
+.out
+.storybook-out
+storybook-static
+
+# temporary folders
+tmp/
+temp/
+
+# documentation and development notes
+CLAUDE.md
+docs/
+documentation/
+pitching/
+agents/
+"Landing Page Structure for Salus Water Lead Capture/"
+
+# development assets and screenshots
+*.png
+*.jpg
+*.jpeg
+*.gif
+*.webp
+*.svg
+!public/*.webp
+!public/*.png
+!public/*.jpg
+!public/*.jpeg
+!public/*.gif
+!public/*.svg
+
+# MCP configuration
+.mcp.json
